Zmeny v RestaurantManager a doplnenie toString do ďalších tried, príprava kódu pre overenie.
RestaurantManager - oprava metódy exportOrdersForTableToFile a doplnenie metódy calculateTotalPriceForTable.